fix/feat: Test-1313 add new ui

--- a/Register/index.html
+++ b/Register/index.html
@@ -6,7 +6,7 @@
     <title>Project</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque quae fugit iste deserunt ut consectetur harum quasi facere. Aut iure facere maiores nesciunt officia minus voluptatem provident ipsam cupiditate incidunt.
+    <h1>2131231Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque quae fugit iste deserunt ut consectetur harum quasi facere. Aut iure facere maiores nesciunt officia minus voluptatem provident ipsam cupiditate incidunt.
     Ipsa quaerat soluta ut ex veritatis unde id sint earum exercitationem nesciunt nihil in iste pariatur similique asperiores repellendus enim nam mollitia, veniam explicabo? Id praesentium accusantium architecto voluptatem quod?
     Architecto fuga sed natus laudantium itaque atque! Eligendi repellat, nihil obcaecati laudantium voluptatem consectetur nisi harum culpa atque optio sit quasi quam est eaque voluptatibus hic quisquam laborum voluptatum maxime.
     Dolore vel quod repudiandae dicta sed voluptate amet cum soluta hic ratione debitis, et aut quaerat, deserunt libero iusto totam voluptates deleniti odit consequatur beatae dolores dolorum est! Cum, laborum?
