--- a/html/register.html
+++ b/html/register.html
@@ -6,6 +6,7 @@
    <title>Document</title>
 </head>
 <body>
-   
+   <p>Hello, world!!!!!</p>
+   <h1>Lorem ipsum dolor sit amet.</h1>
 </body>
 </html>
