fix/ correct connection between files

--- a/html/register.html
+++ b/html/register.html
@@ -22,8 +22,10 @@
           <input type="email" placeholder="Email" required>
           <input type="password" placeholder="Password" required>
           <button>Зареєструватися</button>
-          <p>Вже є акаунт? <a href="#" id="show-login">Натисніть тут</a></p>
+          <p>Вже є акаунт?  <a href="#" id="show-login">Натисніть тут</a></p>
       </div>
   </div>
+
+  <script type="module" src="../script/register.js"></script>
 </body>
 </html>
