add: spotify/audio 1

--- a/html/main.html
+++ b/html/main.html
@@ -59,6 +59,10 @@
                 </a>
             </div>
         </header>
+
+        <section>
+            <div style="color: aliceblue;">CDWDAW</div>
+        </section>
     </div>
     
         <div class="grid_container">
