--- a/html/register.html
+++ b/html/register.html
@@ -28,6 +28,7 @@
                             <div class="regInps">
                                 <form name="test" style="color: white; font-family: Circular; font-size: 15px;">Email address</form>
                                 <input name="test" type="text" id="emailRegInp" placeholder="name@domain.com">
+                                <p id="forError"></p>
                             </div>
     
                             <button id="regNext">Next</button>
@@ -45,7 +46,7 @@
                             </div>
                         </div>
                     
-                        <div>
+                        <div class="forHr2">
                         <hr style="color: gray;
                         width: 300px; margin-top: 30px;">
                         </div>
@@ -71,6 +72,6 @@
 
     </div>
 
-    <script type="module" src="../script/main.js"></script>
+    <script type="module" src="../script/regLog.js"></script>
 </body>
 </html>
