--- a/html/main.html
+++ b/html/main.html
@@ -27,7 +27,7 @@
                     </button></header>
                     <div class="list_music_bar">
                         <ul class="list_music">
-                            <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
+                            <li><button class="Like"><a href="main_liked_songs.html"><img aria-hidden="true" draggable="false" loading="eager" src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image" alt="Пісні, що сподобалися" class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" srcset="https://misc.scdn.co/liked-songs/liked-songs-64.png 32w, https://misc.scdn.co/liked-songs/liked-songs-64.png 64w"></a></button></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
@@ -57,8 +57,148 @@
                         <p>Download App</p>
                     </div>
                 </a>
+                <button class="ak"><img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" alt=""></button>
             </div>
         </header>
+
+        <div class="home_tabs">
+            <a href="main.html" class="home_tab active">All</a>
+            <a href="main_music.html" class="home_tab">Music</a>
+            <a href="main_podcasts.html" class="home_tab">Podcasts</a>
+            <a href="main_liked_songs.html" class="home_tab">Liked songs</a>
+        </div>
+
+        <span class="Music">Music</span>
+        <div class="playlists">
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+            <div class="playlist">
+                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
+                <span>SMS вночі</span>
+            </div>
+        </div>
+
+        <div class="for_you">
+            <span>
+                For the user Name
+            </span>
+            <div class="mix_day">
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="mix_1">
+                    <a href="">
+                        <div>
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <div class="name_mix">
+                                <a href="">Mix day 1</a>
+                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     
         <div class="grid_container">
@@ -73,8 +213,6 @@
             <div class="grid_item i3"></div>
         </div>
 </div>
-
-    
 <script type="module" src="../script/main.js"></script>
 </body>
 </html>
