--- a/html/main.html
+++ b/html/main.html
@@ -70,35 +70,35 @@
 
         <span class="Music">Music</span>
         <div class="playlists">
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#1.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#2.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#3.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#4.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#5.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#6.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#7.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist">
+            <div class="playlist" data-src="Audio#8.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
@@ -209,7 +209,12 @@
             </div>
                 
             </div>
-            <div class="grid_item i2"></div>
+            <div class="grid_item i2">
+                <audio id="audioPlayer" controls>
+                <source id="audioSource" src="" type="audio/mpeg">
+                Ваш браузер не підтримує відтворення аудіо.
+            </audio>
+        </div>
             <div class="grid_item i3"></div>
         </div>
 </div>
