--- a/html/main.html
+++ b/html/main.html
@@ -70,35 +70,35 @@
 
         <span class="Music">Music</span>
         <div class="playlists">
-            <div class="playlist" data-src="Audio#1.mp3">
+            <div class="playlist" data-src="../audio/Audio#1.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#2.mp3">
+            <div class="playlist" data-src="../audio/Audio#2.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#3.mp3">
+            <div class="playlist" data-src="../audio/Audio#3.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#4.mp3">
+            <div class="playlist" data-src="../audio/Audio#4.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#5.mp3">
+            <div class="playlist" data-src="../audio/Audio#5.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#6.mp3">
+            <div class="playlist" data-src="../audio/Audio#6.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#7.mp3">
+            <div class="playlist" data-src="../audio/Audio#7.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="Audio#8.mp3">
+            <div class="playlist" data-src="../audio/Audio#8.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
@@ -211,13 +211,16 @@
             </div>
             <div class="grid_item i2">
                 <audio id="audioPlayer" controls>
-                <source id="audioSource" src="" type="audio/mpeg">
+                <source id="audioSource" src="" type="audio/mp3">
                 Ваш браузер не підтримує відтворення аудіо.
             </audio>
         </div>
             <div class="grid_item i3"></div>
         </div>
 </div>
-<script type="module" src="../script/main.js"></script>
+<script type="module" src="../script/main.js">
+
+
+</script>
 </body>
 </html>
