--- a/html/main.html
+++ b/html/main.html
@@ -70,7 +70,7 @@
 
         <span class="Music">Music</span>
         <div class="playlists">
-            <div class="playlist" data-src="Audio#1.mp3">
+            <div class="playlist" data-src="../audio/Audio#1.mp3" style="cursor: pointer;">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
