--- a/html/main.html
+++ b/html/main.html
@@ -70,35 +70,35 @@
 
         <span class="Music">Music</span>
         <div class="playlists">
-            <div class="playlist" data-src="Audio#1.mp3">
+            <div class="playlist" data-src="../audio/Audio1.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#2.mp3">
+            <div class="playlist" data-src="../audio/Audio2.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#3.mp3">
+            <div class="playlist" data-src="../audio/Audio3.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#4.mp3">
+            <div class="playlist" data-src="../audio/Audio4.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#5.mp3">
+            <div class="playlist" data-src="../audio/Audio5.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#6.mp3">
+            <div class="playlist" data-src="../audio/Audio6.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#7.mp3">
+            <div class="playlist" data-src="../audio/Audio7.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#8.mp3">
+            <div class="playlist" data-src="../audio/Audio8.mp3">
                 <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
                 <span>SMS вночі</span>
             </div>
@@ -207,7 +207,7 @@
                 <a href="">Come As You Are</a> 
                 <a style="font-size: 12px;" href="">Nirvana</a>
             </div>
-                
+            
             </div>
             <div class="grid_item i2">
                 <audio id="audioPlayer" controls>
