--- a/html/main.html
+++ b/html/main.html
@@ -70,37 +70,37 @@
 
         <span class="Music">Music</span>
         <div class="playlists">
-            <div class="playlist" data-src="../audio/Audio#1.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio1.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b2731f0c88b6244be97fe133da71" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>"ЗА ТЕРИКОНАМИ" / МЮСЛІ</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#2.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio2.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b27397507fd22fb690cb9085a864" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>Nirvana / About A Girl</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#3.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio3.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b27384243a01af3c77b56fe01ab1" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>The Beatles / Let It Be</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#4.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio4.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b27341b41e6f7924e530a9b00f9c" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span> Lil Uzi Vert / XO TOUR Llif3</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#5.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio5.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b273072e9faef2ef7b6db63834a3" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>Travis Scott / BUTTERFLY EFFECT</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#6.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio6.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b27371003a1de3c16fe9afd20607" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>"Любов, як осінь" / kavabanga Depo kolibri, Agape</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#7.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio7.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b273204d6ca5b9f0c687be9e9504" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>CHEEV / Гарно так</span>
             </div>
-            <div class="playlist" data-src="../audio/Audio#8.mp3">
-                <img src="https://m.media-amazon.com/images/I/51rH7HMI57L._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" >
-                <span>SMS вночі</span>
+            <div class="playlist" data-src="../audio/Audio8.mp3">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d0000b273a858133a9403cd411d5c7de4" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>Grandma`s Smuzi</span>
             </div>
         </div>
 
@@ -207,7 +207,7 @@
                 <a href="">Come As You Are</a> 
                 <a style="font-size: 12px;" href="">Nirvana</a>
             </div>
-            <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path><path d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"></path></svg>
+            <svg data-encore-id="icon" style="margin-left: 20px;" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path><path d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"></path></svg>
             </div>
             <div class="grid_item i2">
                 <audio id="audioPlayer" controls>
