--- a/html/main.html
+++ b/html/main.html
@@ -5,6 +5,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Spotify</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
    <link rel="stylesheet" href="../style/main.css">
 </head>
 <body>
@@ -57,7 +59,16 @@
                         <p>Download App</p>
                     </div>
                 </a>
-                <button class="ak"><img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" alt=""></button>
+                <button class="ak">
+                    <img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" alt="">
+
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Name</a></li>
+                        <li><a class="dropdown-item" href="#">1.12.2000</a></li>
+                        <li><a class="dropdown-item Exit" href="#">Exit</a></li>
+                        <li><a class="dropdown-item Delete" href="#">delete account</a></li>
+                      </ul>
+                </button>
             </div>
         </header>
 
@@ -230,5 +241,6 @@
 <script type="module" src="../script/main.js">
 
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
