add/ logPage js almost ready

--- a/html/logIn.html
+++ b/html/logIn.html
@@ -62,6 +62,6 @@
         </div>
     </div>
 
-  <script type="module" src="../script/main.js"></script>
+  <script type="module" src="../script/logIn.js"></script>
 </body>
 </html>
