add/ added page for acc deletion + created script for all this

--- a/html/logIn.html
+++ b/html/logIn.html
@@ -31,8 +31,10 @@
                             <div style="display: flex; flex-direction: column;">
                                 <h2 class="logForm">Email or username</h2>
                                 <input class="logInp" id="logEmail" type="email" placeholder="Email or username" required>
+                                <p id="logErr"><img src="../img/alert.webp" class="alertImg">Wrong email or username</p>
                                 <h2 class="logForm">Password</h2>
                                 <input class="logInp" id="logPass" type="password" placeholder="Password" required>
+                                <p id="logErr2"><img src="../img/alert.webp" class="alertImg">Wrong password</p>
                                 <button id="logBtn">Log In</button>
                             </div>
                         </div>
