--- a/html/main.html
+++ b/html/main.html
@@ -6,11 +6,10 @@
    <title>Spotify</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="icon" type="image/png" sizes="" href="/img/R.png">
    <link rel="stylesheet" href="../style/main.css">
 </head>
 <body>
-
     
     <div class="main">
         <div class="Dectop_bar">
@@ -40,6 +39,8 @@
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
+                            <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
+
                         </ul>
                     </div>
                 </div>
