fixed/ new feature

--- a/html/main.html
+++ b/html/main.html
@@ -29,7 +29,7 @@
                     </button></header>
                     <div class="list_music_bar">
                         <ul class="list_music">
-                            <li><button class="Like"><a href="main_liked_songs.html"><img aria-hidden="true" draggable="false" loading="eager" src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image" alt="Пісні, що сподобалися" class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" srcset="https://misc.scdn.co/liked-songs/liked-songs-64.png 32w, https://misc.scdn.co/liked-songs/liked-songs-64.png 64w"></a></button></li>
+                            <li><button class="Like" id="LikeHeart"><img aria-hidden="true" draggable="false" loading="eager" src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image" alt="Пісні, що сподобалися" class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" srcset="https://misc.scdn.co/liked-songs/liked-songs-64.png 32w, https://misc.scdn.co/liked-songs/liked-songs-64.png 64w"></button></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
                             <li><div><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nirvana_around_1992.jpg" alt=""></div></li>
@@ -78,7 +78,7 @@
             </div>
         </header>
 
-        <div class="home_tabs">
+        <div class="home_tabs" id="TableOfBtn">
             <button class="home_tab active" id="AllBtn">All</button>
             <button class="home_tab" id="MusicBtn">Music</button>
             <button class="home_tab" id="PodcastsBtn">Podcasts</button>
