--- a/html/main.html
+++ b/html/main.html
@@ -57,6 +57,11 @@
                 <button data-testid="top-bar-forward-button" aria-label="Уперед" class="ql0zZd7giPXSnPg75NR0 CWFTCu03cdDALodezHmA" disabled=""><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 cAMMLk IYDlXmBmmUKHveMzIPCF" viewBox="0 0 16 16"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg></button>
             </div>
             <div class="head_right">
+                <a href="" class="Exp">
+                    <div class="Exp_prem">
+                        <p>Explore Premium</p>
+                    </div>
+                </a>
                 <a href="">
                     <div class="Down">
                         <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"></path><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"></path></svg>
@@ -65,7 +70,6 @@
                 </a>
                 <button class="ak">
                     <img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" alt="">
-
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" id="userNameUp" href="#"></a></li>
                         <li><a class="dropdown-item" id="userDateUp" href="#"></a></li>
