--- a/html/search.html
+++ b/html/search.html
@@ -60,13 +60,27 @@
               </nav>
                </div>
             <div class="head_right">
+               <a href="" class="Exp">
+                  <div class="Exp_prem">
+                      <p>Explore Premium</p>
+                  </div>
+              </a>
                 <a href="">
                     <div class="Down">
                         <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"></path><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"></path></svg>
                         <p>Download App</p>
                     </div>
                 </a>
-                <button class="ak"><img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" alt=""></button>
+                <button class="ak">
+                  <img src="https://th.bing.com/th/id/OIP.tgHdvqgaSSz4VF0zGp4KJwHaJW?rs=1&pid=ImgDetMain" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" alt="">
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" id="userNameUp" href="#"></a></li>
+                      <li><a class="dropdown-item" id="userDateUp" href="#"></a></li>
+                      <li><a class="dropdown-item Exit" id="exitFromAcc" href="#">Log Out</a></li>
+                      <li><a class="dropdown-item Delete" id="deleteAcc" href="#">Delete Acc</a></li>
+                      <!-- <li><a class="dropdown-item Delete2" id="confirmDelete" type="button" href="#">Tap to confirm</a></li> -->
+                    </ul>
+              </button>
             </div>
         </header>
         <div class="All_search">
@@ -225,5 +239,7 @@
 <script type="module" src="../script/main.js">
   
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
